# libsbsms

./: AUTHORS  CMakeLists.txt  ChangeLog  LICENSE.txt  NEWS  README.md  TODO  aclocal.m4  configure.ac  sbsmsConfig.cmake.in
.github/workflows/: build.yml
example/: CMakeLists.txt
example/src/: audio.cpp  audio.h  config.h  config.h.in  convert.cpp  convert.h  import.cpp  mp3.cpp  mp3.h  mp3tech.cpp  mp3tech.h  pcm.h  pitch.cpp  real.h  sbsms-convert.cpp  sbsmsx.cpp  sbsmsx.h  utils.h
include/: sbsms.h
src/: Makefile.am  config.h.in  dBTable.h  fft.h  grain.cpp  real.h  resample.cpp  sbsms.cpp  slide.cpp  sms.cpp  sms.h  subband.cpp  subband.h  track.cpp  track.h  trackpoint.cpp  utils.h
win/: config.h
